--- a/locale/uk.po
+++ b/locale/uk.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacity 2.2.2\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
-"POT-Creation-Date: 2018-01-18 00:56-0500\n"
-"PO-Revision-Date: 2018-01-18 08:56+0200\n"
+"POT-Creation-Date: 2018-01-23 18:10-0500\n"
+"PO-Revision-Date: 2018-02-01 08:59+0200\n"
 "Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
 "Language-Team: Ukrainian <trans-uk@lists.fedoraproject.org>\n"
 "Language: uk\n"
@@ -59,7 +59,7 @@ msgstr "С&тенд Nyquist…"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp
 msgid "&Undo\tCtrl+Z"
-msgstr "&Вернути\tCtrl+Z"
+msgstr "С&касувати\tCtrl+Z"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp
 msgid "&Redo\tCtrl+Y"
@@ -314,7 +314,7 @@ msgstr "Позначити увесь текст"
 #: lib-src/mod-nyq-bench/NyqBench.cpp src/toolbars/EditToolBar.cpp
 #: src/widgets/KeyView.cpp
 msgid "Undo"
-msgstr "Вернути"
+msgstr "Скасувати"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp
 msgid "Undo last change"
@@ -731,9 +731,9 @@ msgstr ""
 "Звукові дані файлів, які не знайдено, буде замінено тишею.\n"
 "Першою виявлено нестачу цього файла:\n"
 "%s\n"
-"Може не вистачати інших файлів. Скористайтеся пунктом меню «Довідка ->"
-" Діагностика -> "
-"Перевірити залежності», щоб переглянути дані щодо розташування файлів."
+"Може не вистачати інших файлів. Скористайтеся пунктом меню «Довідка -> "
+"Діагностика -> Перевірити залежності», щоб переглянути дані щодо "
+"розташування файлів."
 
 #: src/AudacityApp.cpp
 msgid "Files Missing"
@@ -3106,7 +3106,7 @@ msgstr "Наступна &верхня пікова частота"
 
 #: src/Menus.cpp
 msgid "Next &Lower Peak Frequency"
-msgstr "Наступна &найнижча пікова частота"
+msgstr "Наступна &нижча пікова частота"
 
 #: src/Menus.cpp
 msgid "Pre&vious Clip Boundary to Cursor"
@@ -3223,7 +3223,7 @@ msgstr "Від&новити панелі"
 #. i18n-hint: Clicking this menu item shows the toolbar with the big buttons on it (play record etc)
 #: src/Menus.cpp
 msgid "&Transport Toolbar"
-msgstr "Панель п&еренесення"
+msgstr "Панель від&творення"
 
 #. i18n-hint: Clicking this menu item shows a toolbar that has some tools in it
 #: src/Menus.cpp
@@ -3307,7 +3307,7 @@ msgstr "Пуск/Стоп і вс&тановлення курсора"
 
 #: src/Menus.cpp
 msgid "&Loop Play"
-msgstr "Ві&дтворити у циклі"
+msgstr "Ві&дтворити циклічно"
 
 #: src/Menus.cpp
 msgid "&Pause"
@@ -3364,7 +3364,7 @@ msgstr "К&інець проекту"
 
 #: src/Menus.cpp
 msgid "Pla&y Region"
-msgstr "Відтвор&ити область"
+msgstr "Область відтво&рення"
 
 #: src/Menus.cpp
 msgid "&Lock"
@@ -3380,11 +3380,11 @@ msgstr "П&овторно виявити звукові пристрої"
 
 #: src/Menus.cpp
 msgid "Transport &Options"
-msgstr "Параметри п&ередавання"
+msgstr "Параметри від&творення"
 
 #: src/Menus.cpp
 msgid "Sound Activation Le&vel..."
-msgstr "&Рівень активізації звуку…"
+msgstr "&Рівень активізації звуком…"
 
 #: src/Menus.cpp
 msgid "Sound A&ctivated Recording (on/off)"
@@ -5322,7 +5322,7 @@ msgstr ""
 "Якщо проект зберегти, у ньому не буде доріжок.\n"
 "\n"
 "Щоб зберегти всі попередньо відкрити доріжки:\n"
-"Скасуйте операцію, вибирайте Зміни > Вернути, аж\n"
+"Скасуйте операцію, вибирайте Зміни > Скасувати, аж\n"
 "доки всі доріжки не буде відкрито, а потім виберіть\n"
 "Файл > Зберегти проект."
 
@@ -5484,7 +5484,7 @@ msgstr ""
 "Якщо проект зберегти, у ньому не буде доріжок.\n"
 "\n"
 "Щоб зберегти всі попередньо відкрити доріжки:\n"
-"Скасуйте операцію, скористайтеся пунктом меню Зміни > Вернути, аж\n"
+"Скасуйте операцію, скористайтеся пунктом меню Зміни > Скасувати, аж\n"
 "доки всі доріжки не буде відкрито, а потім виберіть\n"
 "Файл > Зберегти проект.\n"
 "\n"
@@ -5851,7 +5851,7 @@ msgstr "Інструменти"
 
 #: src/Screenshot.cpp src/toolbars/ControlToolBar.cpp
 msgid "Transport"
-msgstr "Перенесення"
+msgstr "Відтворення"
 
 #: src/Screenshot.cpp src/toolbars/MixerToolBar.cpp
 msgid "Mixer"
@@ -5995,7 +5995,7 @@ msgstr "Вимкнено"
 
 #: src/Snap.cpp
 msgid "Nearest"
-msgstr "Найближчен"
+msgstr "Найближче"
 
 #: src/Snap.cpp
 msgid "Prior"
@@ -10233,7 +10233,9 @@ msgstr "Всі позначені ділянки звукових доріжок
 msgid "All audio is muted."
 msgstr "Всі дані звукових доріжок замінено тишею."
 
-#: src/export/Export.cpp
+#: src/export/Export.cpp src/export/ExportFFmpeg.cpp src/export/ExportFLAC.cpp
+#: src/export/ExportMP2.cpp src/export/ExportMP3.cpp src/export/ExportOGG.cpp
+#: src/export/ExportPCM.cpp
 msgid "Unable to export"
 msgstr "Не вдалося експортувати"
 
@@ -10281,9 +10283,9 @@ msgstr ""
 "проекті.\n"
 "Запис цього файла неможливий, оскільки для відновлення початкових звукових "
 "даних у проекті слід вказати шлях до них.\n"
-"Скористайтеся пунктом меню «Довідка -> Діагностика -> Перевірити залежності»,"
-" щоб переглянути "
-"записи щодо розташування всіх файлів, яких не вистачає.\n"
+"Скористайтеся пунктом меню «Довідка -> Діагностика -> Перевірити "
+"залежності», щоб переглянути записи щодо розташування всіх файлів, яких не "
+"вистачає.\n"
 "Якщо ви все ще бажаєте експортувати дані, будь ласка, вкажіть іншу назву "
 "файла або теки."
 
@@ -11931,9 +11933,8 @@ msgstr ""
 "вам доведеться зберігати початкові назви та розташування редагованих "
 "файлів.\n"
 "Переглянути список назв та розташування файлів, дані яких використовуються "
-"безпосередньо, можна за допомогою пункту меню «Довідка -> Діагностика ->"
-" Перевірити "
-"залежності».\n"
+"безпосередньо, можна за допомогою пункту меню «Довідка -> Діагностика -> "
+"Перевірити залежності».\n"
 "\n"
 "Отже, який спосіб слід використати для імпортування поточних файлів?"
 
@@ -13465,8 +13466,8 @@ msgstr ""
 "Натисніть «Завантажити кеш тем», щоб завантажити змінені зображення та "
 "кольори до Audacity.\n"
 "\n"
-"(У поточній версії підтримуються панель перенесення та кольори звукової "
-"доріжки, незважаючи на те, що файли\n"
+"(У поточній версії передбачено підтримку панелі відтворення та кольорів "
+"звукової доріжки, незважаючи на те, що файли\n"
 "зображень показують також інші піктограми.)"
 
 #: src/prefs/ThemePrefs.cpp
@@ -13974,7 +13975,7 @@ msgstr "Показати лінійку прокручування"
 
 #: src/toolbars/SelectionBar.cpp
 msgid "Selection"
-msgstr "Вибрана область"
+msgstr "Позначене"
 
 #: src/toolbars/SelectionBar.cpp
 msgid "Project Rate (Hz)"
